--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
 	},
 	"require": {
 		"php": ">=5.3.7",
-		"illuminate/database": "5.1.16"
+		"illuminate/database": "5.1.16",
+		"filp/whoops":"*"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
